-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b15
-
sparc
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2226429 | 8 | Vladimir Kozlov | P3 | Resolved | Fixed | b46 |
| JDK-8018291 | 7u45 | Vladimir Kozlov | P3 | Closed | Fixed | b01 |
| JDK-8002635 | 7u40 | Vladimir Kozlov | P3 | Closed | Fixed | b01 |
Several Nightly tests java/util and regression/jit which called java.util.Calendar.clear() crashed with SIGBUS on sparc:
java/util/Calendar/WeekDateTest.java
java/util/Locale/InternationalBAT.java
java/util/Locale/ThaiGov.java
regression/jit/4139729/Calendar/CalendarLimitTest
regression/jit/4139729/Calendar/CalendarTest
regression/jit/4139729/Calendar/Limit
regression/jit/4139731/Date/DateTest
They crashed on vector instruction which zeros byte array in compiled code for java.util.Calendar.clear():
;; ffffffff77afa2bc 06 47 ff ed bl,pn %icc, 0xffffffff77afa270
;; ---------------
;; ffffffff77afa2c0 c0 74 20 10 clrx [ %l0 + 0x10 ]
BPlt B14 ! Loop end P=0.900000 C=-1.000000
STX #0,[R_L0 + #16] ! store zero vector (8 bytes)
java/util/Calendar/WeekDateTest.java
java/util/Locale/InternationalBAT.java
java/util/Locale/ThaiGov.java
regression/jit/4139729/Calendar/CalendarLimitTest
regression/jit/4139729/Calendar/CalendarTest
regression/jit/4139729/Calendar/Limit
regression/jit/4139731/Date/DateTest
They crashed on vector instruction which zeros byte array in compiled code for java.util.Calendar.clear():
;; ffffffff77afa2bc 06 47 ff ed bl,pn %icc, 0xffffffff77afa270
;; ---------------
;; ffffffff77afa2c0 c0 74 20 10 clrx [ %l0 + 0x10 ]
BPlt B14 ! Loop end P=0.900000 C=-1.000000
STX #0,[R_L0 + #16] ! store zero vector (8 bytes)
- backported by
-
JDK-2226429 SIGBUS on sparc in compiled code for java.util.Calendar.clear()
-
- Resolved
-
-
JDK-8002635 SIGBUS on sparc in compiled code for java.util.Calendar.clear()
-
- Closed
-
-
JDK-8002636 SIGBUS on sparc in compiled code for java.util.Calendar.clear()
-
- Closed
-
-
JDK-8018291 SIGBUS on sparc in compiled code for java.util.Calendar.clear()
-
- Closed
-
- relates to
-
JDK-7119644 Increase superword's vector size up to 256 bits
-
- Resolved
-