7177923: SIGBUS on sparc in compiled code for java.util.Calendar.clear()

Disable vectorization of a memory access with more elements per vector than one which is used for alignment on sparc

Reviewed-by: twisti